# gazebo-slam-prototype

./: .gitignore  .gitmodules  Creating a point cloud for 2d SLAM using 8 TOF sensors.md  README.md  To-do.txt  agents.md  build_guide.md  environment.yml  frames_2025-10-23_21.47.51.gv  frames_2025-11-02_20.53.42.gv  frames_2025-11-02_21.04.20.gv  frames_2025-11-02_21.18.10.gv  frames_2025-11-02_21.32.32.gv  frames_2025-11-02_21.55.49.gv  frames_2025-11-02_22.10.16.gv  gazebo_environment.md  gz_bridge.md  gz_move_doctor.sh  gz_ros_diag_v2.sh  implementation_plan.md  local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  pixi.toml  setup.bash  setup.ps1  setup.sh  setup.zsh
PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 4022_gz_x500_small_tof  4023_gz_x500_tof  CMakeLists.txt
PX4-Autopilot/Tools/simulation/gz/models/TOF-Ring/: model.config  model.sdf
PX4-Autopilot/Tools/simulation/gz/models/x500_small/: model.config  model.sdf
PX4-Autopilot/Tools/simulation/gz/models/x500_small_base/: model.config  model.sdf
PX4-Autopilot/Tools/simulation/gz/models/x500_small_tof/: model.config  model.sdf
PX4-Autopilot/Tools/simulation/gz/models/x500_tof/: model.config  model.sdf
install/: setup.bash
scripts/: activate-cyclonedds.bat  activate-cyclonedds.sh  cleanup_sim.sh  cyclonedds.xml  run_swarm_fast.sh
tof_slam_sim/: CMakeLists.txt  README.md  package.xml  setup.py
tof_slam_sim/cmake/: python_entrypoint.in
tof_slam_sim/config/: bridge.yaml  nav2_params_rex.yaml  slam.rviz  slam_toolbox.yaml  slam_toolbox_fast.yaml
tof_slam_sim/launch/: auto_pilot.launch.py  nav2_explore.launch.py  px4_sitl.launch.py  px4_sitl_slam.launch.py  sim_with_bridge.launch.py  sim_with_logging.launch.py  slam_fast.launch.py  slam_test.launch.py  swarm_fast.launch.py  topic_monitor.launch.py
tof_slam_sim/models/inner_wall/: model.config  model.sdf
tof_slam_sim/models/perimeter_wall/: model.config  model.sdf
tof_slam_sim/models/pillar/: model.config  model.sdf
tof_slam_sim/models/quadcopter/: model.sdf
tof_slam_sim/models/rex_quadcopter/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_10/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_11/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_12/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_13/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_14/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_15/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_2/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_3/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_4/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_5/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_6/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_7/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_8/: model.config  model.sdf
tof_slam_sim/models/rex_quadcopter_9/: model.config  model.sdf
tof_slam_sim/models/vl53l7cx/: model.config  model.sdf
tof_slam_sim/scripts/: auto_pilot.py  depth_alias.py  frame_watchdog.py  log_monitor.py  map_tf_fallback.py  topic_monitor.py
tof_slam_sim/src/: __init__.py  pose_to_tf.py  scan_merger.py  test_controller.py  tof8x8_to_scan.py  tof_to_scan.py
tof_slam_sim/tof_slam_sim/: auto_pilot.py  auto_pilot_node.py  cmd_vel_relay.py  drone_health_dashboard.py  frame_watchdog.py  map_tf_fallback.py  nav2_frontier_explorer.py  odom_tf_publisher.py  scan_merger.py  spawn_selector.py  swarm_map_fuser.py  swarm_tf_broadcaster.py  tf_namespace_relay.py  tof8x8_to_scan.py  topic_monitor.py
tof_slam_sim/worlds/: playfield.sdf  playfield_sparse.sdf  playfield_swarm.sdf
